Archive2/3f/4d5e36a96f9b13/output
main.cpp:1:9: warning: #pragma once in main file [enabled by default]
 #pragma once
         ^
main.cpp: In constructor ‘tt::algo::shellSort(Iterator, Iterator, Sequence, Predicate)::RecursiveSorter::RecursiveSorter(Iterator, Iterator, Sequence, Predicate)’:
main.cpp:36:111: error: ‘distance’ is not a member of ‘std’
                                         beg_(begin), end_(end), strideSeq_(strideSeq), pred_(pred), numElems_(std::distance(beg_, end_)) {}
                                                                                                               ^
main.cpp: In member function ‘void tt::algo::shellSort(Iterator, Iterator, Sequence, Predicate)::RecursiveSorter::sort(tt::algo::uint)’:
main.cpp:43:41: error: ‘detail’ has not been declared
                                         detail::hSort(beg_, end_, strideSeq_(index), pred_);
                                         ^
main.cpp: In function ‘void tt::algo::detail::hSort(Iterator, Iterator, tt::algo::uint, Predicate)’:
main.cpp:62:48: error: ‘distance’ is not a member of ‘std’
                                 int numElems = std::distance(begin, end);
                                                ^
main.cpp:74:57: error: ‘iter_swap’ is not a member of ‘std’
                                                         std::iter_swap(lhs, rhs);
                                                         ^
